--- a/pallets/subswap/Cargo.toml
+++ b/pallets/subswap/Cargo.toml
@@ -24,7 +24,7 @@ frame-system = { default-features = false, version = '2.0.0' }
 sp-runtime = { default-features = false, version = '2.0.0' }
 pallet-balances = {default-features = false, version = '2.0.0'}
 pallet-timestamp = {default-features = false, version = '2.0.0'}
-
+sp-core = { default-features = false, version = '2.0.0' }
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
@@ -37,5 +37,6 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'pallet-balances/std',
+    'sp-core/std',
     'pallet-timestamp/std'
 ]
