--- a/pallets/token/Cargo.toml
+++ b/pallets/token/Cargo.toml
@@ -1,42 +1,38 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-description = 'FRAME pallet template for defining custom runtime logic.'
+authors = ['Hyungsuk Kang <hskang9@gmail.com>']
+description = 'Token pallet for standard protocol'
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
-name = 'subswap'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+name = 'pallet-standard-token'
+repository = 'https://github.com/digitalnativeinc/standard-substrate'
 version = '2.0.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-# alias "parity-scale-code" to "codec"
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.4'
-
 [dependencies]
+serde = { version = "1.0.101", optional = true }
+codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"], default-features = false }
 frame-support = { default-features = false, version = '2.0.0' }
 frame-system = { default-features = false, version = '2.0.0' }
 sp-runtime = { default-features = false, version = '2.0.0' }
-pallet-balances = {default-features = false, version = '2.0.0'}
-pallet-timestamp = {default-features = false, version = '2.0.0'}
 sp-core = { default-features = false, version = '2.0.0' }
+sp-std = { version = "2.0.0", default_features = false }
+pallet-balances = {default_features = false, version = '2.0.0'}
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
 sp-io = { default-features = false, version = '2.0.0' }
+pallet-balances = {default_features = false, version = '2.0.0'}
 
 [features]
 default = ['std']
 std = [
+    'serde',
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'pallet-balances/std',
     'sp-core/std',
-    'pallet-timestamp/std'
+    'sp-std/std'
 ]
