--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -25,7 +25,11 @@ hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
 # local dependencies
-subswap = { path = '../pallets/subswap', default-features = false, version = '2.0.0' }
+pallet-standard-token = { path = '../pallets/token', default-features = false, version = '2.0.0' }
+pallet-standard-market = { path = '../pallets/market', default_features = false, version = '2.0.0' }
+pallet-standard-oracle = { path = '../pallets/oracle', default_features = false, version = '2.0.0' }
+pallet-standard-vault = { path = '../pallets/vault', default_features = false, version = '2.0.0' }
+
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
 frame-executive = { default-features = false, version = '2.0.0' }
@@ -77,7 +81,7 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'subswap/std',
+    'pallet-standard-token/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
